--- a/src/app/admin/toolbar-admin/toolbar-admin.component.html
+++ b/src/app/admin/toolbar-admin/toolbar-admin.component.html
@@ -26,7 +26,7 @@
     &nbsp;
     Contratos: Crear nuevo
   </button>
-  <button mat-menu-item>
+  <button mat-menu-item (click)="seeAccounts()">
     <mat-icon>account_balance</mat-icon>
     &nbsp;
     Cuentas: Ver 
