--- a/src/app/admin/admin-home/admin-home.component.html
+++ b/src/app/admin/admin-home/admin-home.component.html
@@ -66,7 +66,7 @@
     </mat-card-header>
 
     <mat-card-actions class="center">
-      <button mat-button>
+      <button mat-button (click)="seeAccounts()">
         <mat-icon>account_balance</mat-icon>
         &nbsp; 
         Ver Cuentas
