--- a/src/app/admin/toolbar-admin/toolbar-admin.component.html
+++ b/src/app/admin/toolbar-admin/toolbar-admin.component.html
@@ -16,7 +16,7 @@
     Home  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   </button>
-  <button mat-menu-item>
+  <button mat-menu-item (click)="seeContracts()">
     <mat-icon>people</mat-icon>
     &nbsp;
     Contratos: Ver 
