--- a/src/app/academia/toolbar/toolbar.component.html
+++ b/src/app/academia/toolbar/toolbar.component.html
@@ -22,15 +22,10 @@
     &nbsp;
     Cargar nuevo pago
   </button>
-  <button mat-menu-item>
+  <button mat-menu-item (click)="pagos()">
     <mat-icon>history</mat-icon>
     &nbsp;
     Historial de pagos
-  </button>
-  <button mat-menu-item>
-    <mat-icon>receipt</mat-icon>
-    &nbsp;
-    Movimientos
   </button>
   <button mat-menu-item>
     <mat-icon>redeem</mat-icon>
