--- a/src/app/academia/pago/pago.component.html
+++ b/src/app/academia/pago/pago.component.html
@@ -16,9 +16,9 @@
     <mat-card-content>
       Una vez que usted haya realizado un dep&oacute;sito para Profit Takers 
       (ya sea para Inversi&oacute;n o para la Academia)
-      podr&aacute; registrarlo por &eacute;sta v&iacute;a. Recuerde nuestras v&iacute;as 
+      podr&aacute; registrarlo por &eacute;sta v&iacute;a. Recuerde nuestras v&iacute;as avaladas  
       previamente dispuestas para este fin (ver nota al pie de esta p&aacute;gina). 
-      Una vez hayamos validado su transacci&oacute;n nos pondremos
+      Una vez hayamos validado su transacci&oacute;n/consignaci&oacute;n nos pondremos
       en contacto con ud. a la brevedad posible.
     </mat-card-content>
 
@@ -28,58 +28,141 @@
   
     <mat-card-content>
       <form class="full-form profile-form">
-        <div class="row justify-content-md-center">
+        <div class="row justify-content-sm-center">
           
-          <div class="col-md-12 center">
+          <div class="col-sm-12 center">
             <mat-form-field class="full-width" color="accent">
-              <mat-label>Banco/Cuenta en la que realiz&oacute; la consignaci&oacute;n</mat-label>
-              <mat-select [(ngModel)]="banco" (selectionChange)="selectedContract(banco)" required [ngModelOptions]="{standalone: true}"><!-- el color de letra lo da la clase .mat-select-value -->
-                <mat-option value="A">Bancolombia - Cta. Cte. 123465798</mat-option>
-                <mat-option value="B">Banco de Bogotá - Cta. Ah. 789789456</mat-option>
+              <mat-label>Banco/Cuenta/Medio de pago de su consignaci&oacute;n</mat-label>
+              <mat-select [(ngModel)]="banco" required [ngModelOptions]="{standalone: true}"><!-- el color de letra lo da la clase .mat-select-value -->
+                <mat-option value="Bancolombia - 1">Bancolombia - Cta. Cte. 123465798</mat-option>
+                <mat-option value="Banco de Bogotá - 1">Banco de Bogotá - Cta. Ah. 789789456</mat-option>
               </mat-select>
               <mat-icon matSuffix>account_balance</mat-icon>
             </mat-form-field>
           </div>
 
-          <div class="col-xs-12">
+          <div class="col-sm-12">
             <mat-form-field class="full-width" color="accent">
               <mat-label>Fecha en que realiz&oacute; la consignaci&oacute;n</mat-label>
-              <input matInput [matDatepicker]="picker" name="fecha" [(ngModel)]="fecha" class="inputRight">
+              <input matInput [matDatepicker]="picker" [(ngModel)]="fecha" class="inputRight" required [ngModelOptions]="{standalone: true}">
               <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
               <mat-datepicker #picker></mat-datepicker>
             </mat-form-field>
           </div>
 
-          <div class="col-xs-12">
+          <div class="col-sm-12">
             <mat-form-field class="full-width" color="accent">
               <mat-label id="monto">Monto depositado</mat-label>
-              <input matInput [(ngModel)]="monto" name="monto" type="number" class="inputRight">
+              <input matInput [(ngModel)]="monto" type="number" class="inputRight" required [ngModelOptions]="{standalone: true}">
               <mat-icon matSuffix>attach_money</mat-icon>
             </mat-form-field>
           </div>
 
-          <div class="col-xs-12">
+          <div class="col-sm-12 center">
             <mat-form-field class="full-width" color="accent">
-              <mat-label id="concepto">Concepto</mat-label>
-              <input matInput [(ngModel)]="concepto" name="concepto" type="text" required>
-              <mat-icon matSuffix>developer_board</mat-icon>
+              <mat-label>Deposito hecho en Moneda...</mat-label>
+              <mat-select [(ngModel)]="currency" required [ngModelOptions]="{standalone: true}"><!-- el color de letra lo da la clase .mat-select-value -->
+                <mat-option value="USD">USD ($ - U.S. Dólares)</mat-option>
+                <mat-option value="EUR">EUR (€ - Euros)</mat-option>
+                <mat-option value="COP">COP ($ - Pesos Colombianos)</mat-option>
+              </mat-select>
+              <mat-icon matSuffix>euro_symbol</mat-icon>
             </mat-form-field>
           </div>
 
-          <div class="col-xs-12 center pointer">
+          <div class="col-sm-12">
+            <mat-form-field class="full-width" color="accent">
+              <mat-label id="concepto">Concepto</mat-label>
+              <input matInput [(ngModel)]="concepto" type="text" required [ngModelOptions]="{standalone: true}">
+              <mat-icon matSuffix>developer_board</mat-icon>
+            </mat-form-field>
+          </div>
+        </div>
+
+        <div class="row card-person-inverted">
+          <div class="col">
+            <mat-label id="nombre" style="padding-left: 15px;">
+              Elija destino de su consignación en Profit Takers:
+            </mat-label>
+            <br/><br/>
+            <mat-radio-group aria-label="Elija destino de su consignación en Profit Takers" [(ngModel)]="destino" [ngModelOptions]="{standalone: true}">
+              <mat-radio-button value="Inversiones" matTooltip="Será sumado a su disponible para hacer Trading" aria-label="Será sumado a su disponible para hacer Trading"
+               matTooltipPosition="below" class="question">
+                <span class="lBlanca">Inversiones (Trading)</span>
+              </mat-radio-button>
+              <mat-radio-button value="Academia" matTooltip="Será usado para su pago de Membresía por Suscripción" aria-label="Será usado para su pago de Membresía por Suscripción"
+               matTooltipPosition="below" class="question">
+                <span class="lBlanca">Academia</span>
+              </mat-radio-button>
+            </mat-radio-group>
+            <br/>
+          </div>
+        </div>
+
+        <br/><br/>
+
+        <div class="row">
+          <div class="col center">
             <mat-icon matSuffix style="font-size: 50px;">add_a_photo</mat-icon>
             <br/>
-            Cargar foto (upload) (extensiones permitidas: .JPG, .JPEG, .PNG)
+            Cargar imagen  
+            <span style="color: red;">*</span> 
+            (extensión permitida: .PNG)
+            <input type="file" (change)="fileChangeEvent($event)">
           </div>
-
         </div>
+
+        <div class="row">
+          <div class="col center">
+            <!-- https://www.npmjs.com/package/ngx-image-cropper  | [aspectRatio]="4 / 3" -->
+            <image-cropper
+              [imageChangedEvent]="imageChangedEvent"
+              [maintainAspectRatio]="false"
+              [aspectRatio]="1 / 1"
+              [resizeToWidth]="128"
+              onlyScaleDown="true"
+              format="png"
+              (imageCropped)="imageCropped($event)"
+              (imageLoaded)="imageLoaded()"
+              (loadImageFailed)="loadImageFailed()"
+              alignImage="center"
+            ></image-cropper>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col center">
+            <div class="footerApp">
+              Resultado del ajuste:
+            </div>
+            <div class="">
+              <img [src]="croppedImage || 'assets/images/subir_archivo_png.png'" style="width: 100%;">
+            </div>
+          </div>
+        </div>
+        
+        <div class="row" *ngIf="croppedImage">
+          <div class="col-2 center">
+            <br/>
+            <mat-icon matSuffix>crop</mat-icon>
+          </div>
+          <div class="col-8 center">
+            Redimensione la imagen usando las flechas de dirección.
+            Cuando termine, puede pulsar el botón final "Registrar Pago nuevo".
+          </div>
+          <div class="col-2 center">
+            <br/>
+            <mat-icon matSuffix>crop_free</mat-icon>
+          </div>
+        </div>
+
       </form>
     </mat-card-content>
   
   </mat-card>
 
-  <div class="row justify-content-md-center">
-    <div class="col-md-12 center">
+  <div class="row justify-content-sm-center">
+    <div class="col-sm-12 center">
       <u>Nota</u>: 
       *Es necesario adjuntar una 
       <b matTooltip="Una Captura de pantalla (a veces se le llama 'Pantallazo', ó en inglés 'Print screen' o 'Screenshot') tomada en su computador/celular de cuando hizo la transferencia. En computadoras use la tecla 'Prt Scrn' ó 'Impr pant'."
@@ -88,16 +171,16 @@
       </b>
       Posterior a adjuntar su archivo, puede proceder a pulsar el siguiente boton.
       <br/><br/>
-      <button mat-raised-button (click)="updateProfilePicture()" color="accent"><b>Registrar Pago nuevo</b></button>
-      <br/><br/>
+      <button mat-raised-button (click)="crearPago()" color="accent"><b>Registrar Pago nuevo</b></button>
+      <br/>
     </div>
-    <div class="col-xs-12 center">
+    <div class="col-sm-12 center">
       <br/>
       <a href (click)="$event.preventDefault();goHome();" class="href-red">Cancelar</a>
     </div>
   </div>
   
-  <br/><br/><br/>
+  <br/>
 
   <mat-card class="card-person">
     <mat-card-content>
@@ -107,9 +190,20 @@
         <li>Bancolombia, Nº de cuenta Ahorros: blablablah</li>
         <li>Banco de Bogotá, Nº de cuenta Corriente: blablablah</li>
       </ol>
-      <br/><br/>
     </mat-card-content>
-
   </mat-card>
-  <br/><br/><br/>
+  <mat-card class="card-person">
+    <mat-card-content>
+      <span style="color: red;">*</span>
+      Los términos "Pantallazo", "Captura de pantalla" ó "Print screen" significan lo mismo.
+      Todo archivo tiene una extensión después de su nombre, la imagen que deberá subir 
+      es un archivo que represente la confirmación de transferencia/consignación de parte suya
+      y debe terminar en .PNG
+      <br/>
+      Ejemplo: <b>"mi_pago_de_enero.png"</b>
+    </mat-card-content>
+  </mat-card>
+
+  <br/>
+
 </div>
